--- a/src/components/Feedback.css
+++ b/src/components/Feedback.css
@@ -1,10 +1,19 @@
 .feedback {
   background-color: #252538;
-  padding: 0px; /* Increased padding for better spacing */
+  padding: 0px 10px;
+  /* Increased padding for better spacing */
   border-radius: 10px;
-  max-height: 288px; /* Set the maximum height */
-  overflow-y: auto; /* Enable vertical scrolling */
- margin-top: 0px;
+  max-height: 288px;
+  /* Set the maximum height */
+  overflow-y: auto;
+  /* Enable vertical scrolling */
+  margin-top: 0px;
+  max-height: 235px;
+}
+
+.feedback::-webkit-scrollbar {
+  display: none;
+  /* Safari and Chrome */
 }
 
 .feedback h3 {
@@ -22,7 +31,7 @@
 }
 
 .feedback-card p {
-  margin: 0px ;
+  margin: 0px;
   font-size: 14px;
   color: #ccc;
 }
