--- a/src/components/RecentOrders.css
+++ b/src/components/RecentOrders.css
@@ -1,8 +1,14 @@
 .orders {
   background-color: #252538;
-  padding: 0px;
+  padding: 0px 10px;
   border-radius: 10px;
-  margin-bottom: 10px;
+  overflow: auto;
+  max-height: 235px;
+}
+
+.orders::-webkit-scrollbar {
+  display: none;
+  /* Safari and Chrome */
 }
 
 .orders h3 {
@@ -14,9 +20,10 @@
   border-collapse: collapse;
 }
 
-.orders th, .orders td {
+.orders th,
+.orders td {
   padding: 5px;
-  border-bottom: 1px solid #3a3a4f;
+  border-top: 1px solid #3a3a4f;
   text-align: left;
 }
 
@@ -25,7 +32,7 @@
 }
 
 .orders .delivered {
-  color: #4caf50;
+  color: #00ff08;
 }
 
 .orders .cancelled {
@@ -33,5 +40,18 @@
 }
 
 .orders .pending {
-  color: #ff9800;
+  color: #f44336;
+}
+
+.order-status {
+  padding: 6px 12px;
+  background-color: #86ff76b0;
+  margin: 0;
+  border-radius: 15px;
+  width: max-content;
+  text-align: center;
+}
+
+.status-red {
+  background-color: #ff4a3d95;
 }
